--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,9 @@
     <string name="phone_validation_subtitle">We use your phone number to log you in and connect you with friends.</string>
     <string name="phone_validation_hint">Country Code + Phone </string>
     <string name="phone_validation_example_phone">ex: +14155099283</string>
-    <string name="phone_validation_loading_dialog">Validating phone number...</string>
+    <string name="phone_validation_loading_dialog">Loading...</string>
     <string name="phone_validation_invalid_phone_number">Invalid phone number, don\'t forget the country code!</string>
+    <string name="phone_validation_problem">There has been a problem. Please check your connection and try again.</string>
 
     <!-- Code Confirmation activity -->
     <string name="code_confirmation_title">Enter Validation Code</string>
